- 로그아웃 세션 삭제

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -6,7 +6,7 @@
         <h1>todo 메인 페이지</h1>
         <img class="gb_Ia gbii" th:src="${userInfo.getPicture()}">
 <!--        <h3><span th:text="${userInfo.getName()}"></span></h3>-->
-        <a href="/logout" class="btn btn-info active" role="button">Logout</a>
+        <a href="/logout2" class="btn btn-info active" role="button">Logout</a>
 
         <th:block th:insert="layout/layout :: f_footer"></th:block>
     </body>
