--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -8,7 +8,7 @@
             <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
 <!--            <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>-->
             <a href="/oauth2/authorization/google" class="btn btn-secondary active" role="button">Google Login</a>
-<!--            <a href="/oauth2/authorization/naver" class="btn btn-success active" role="button">Naver Login</a>-->
+            <a href="/oauth2/authorization/naver" class="btn btn-success active" role="button">Naver Login</a>
         </form>
         <th:block th:insert="layout/layout :: f_footer"></th:block>
     </body>
