--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -22,3 +22,207 @@
     cursor: pointer;
     text-decoration: none;
 }
+
+html,
+body {
+  height: 100%;
+  background-color: #ececec;
+}
+
+body {
+  display: -ms-flexbox;
+  display: flex;
+  color: #000;
+  text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
+  box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
+}
+
+.cover-container {
+  max-width: 100%;
+}
+
+
+
+/*header*/
+.masthead {
+  margin-bottom: 2rem;
+    height: 4.5em;
+    color: white;
+    background: #2d2c2c;
+}
+
+.masthead-brand {
+    margin-bottom: 0;
+    margin-left: 1rem;
+    margin-top: 0.9rem;
+}
+
+.nav-masthead .nav-link {
+  padding: .25rem 0;
+  font-weight: 700;
+  color: rgba(255, 255, 255, .5);
+  background-color: transparent;
+  border-bottom: .25rem solid transparent;
+}
+
+.nav-masthead .nav-link:hover,
+.nav-masthead .nav-link:focus {
+  border-bottom-color: rgba(255, 255, 255, .25);
+}
+
+.nav-masthead .nav-link + .nav-link {
+  margin-left: 1rem;
+}
+
+.nav-masthead .active {
+  color: #fff;
+  border-bottom-color: #fff;
+}
+
+@media (min-width: 48em) {
+  .masthead-brand {
+    float: left;
+  }
+  .nav-masthead {
+    float: right;
+  }
+}
+
+
+
+/*
+ * Cover
+ */
+.cover {
+  padding: 0 0.3rem;
+  height: 100% !important;
+}
+.cover .btn-lg {
+  padding: .75rem 1.25rem;
+  font-weight: 700;
+}
+
+
+/*
+ * Footer
+ */
+.mastfoot {
+  color: rgba(255, 255, 255, .5);
+}
+
+.usernamecss {
+    margin-top: -0.1rem !important;
+    margin-bottom: 1rem !important;
+    margin-left: 0.5rem !important;
+    font-size: 25px !important;
+}
+
+.text-center {
+    text-align: inherit !important;
+}
+
+
+/* 테스트  */
+div.wraptest{
+    max-width: 100%;
+    /*height : auto;*/
+    margin: 0 auto;
+    /*max-height: 97%;*/
+}
+
+div.box {
+    padding: 10px;
+    margin: 5px;
+    /*text-align: center;*/
+}
+
+.sub_title{
+    font-size: 25px;
+}
+
+@media(min-width: 700px) {
+    .wraptest{
+        display: flex;
+    }
+    div.boxC {
+        flex: 1;
+   }
+}
+
+.list-group-item {
+    position: relative;
+    display: block;
+    padding: .75rem 0.25rem;
+    margin-bottom: -1px;
+    background-color: rgba(234, 234, 234, 0) !important;
+    border: 1px solid rgba(0,0,0,.125);
+}
+
+.li_border_box{
+    border-bottom: 2px solid black !important;
+    padding-bottom: 3px !important;
+}
+
+.custom_input{
+    background: rgba(235, 235, 235, 0) !important;
+    border-top: 0px !important;
+    border-right: 0px !important;
+    border-left: 0px !important;
+    border-bottom: 2px solid black !important;
+    width: 14.6rem !important;
+}
+
+.check_btn{
+    background: #ececec00 !important;
+    border: 0px !important;
+    float: left;
+}
+
+.doing{
+    color: blue !important;
+}
+
+.doing:focus{
+    outline: 5px auto #0037ff !important;
+}
+
+.del_btn {
+    background: #ececec00 !important;
+    border: 0px !important;
+    float: right;
+}
+
+.del_btn:focus {
+    outline: 5px auto red !important;
+}
+
+.do{
+    color: red !important;
+}
+
+.li_content_box{
+    cursor: pointer !important;
+}
+
+.li_content_box:hover{
+    background: silver !important;
+    cursor: pointer !important;
+}
+
+.li_content_box:focus{
+    outline: 5px auto black !important;
+}
+
+.li_content_box:active{
+    outline: 4px dashed black;
+}
+
+.li_content{
+    margin-left: 5px !important;
+}
+
+.input_requried {
+    outline: 3px solid red !important;
+}
+
+
