- todo 화면   1) v 클릭시 하는중, 다함으로 상태 변경   2) x 클릭시 등록한 할일 삭제

--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -133,6 +133,7 @@ div.wraptest{
 div.box {
     padding: 10px;
     margin: 5px;
+    margin-bottom : 35px !important;
     /*text-align: center;*/
 }
 
@@ -198,6 +199,10 @@ div.box {
 
 .do{
     color: red !important;
+}
+
+.done{
+    color: green !important;
 }
 
 .li_content_box{
